objects/vlocity_ins__FeeSchedule__c.object
<CustomObject>
    <description>Represents the collection of fee schedule used by insurance carriers to pay its service providers and suppliers such as physicians, dentists, ambulance services, clinical laboratory services, and other suppliers.</description>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Fee Schedule</relationshipLabel>
        <relationshipName>Fee_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Schedule Data</label>
        <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Fee Schedules</relationshipLabel>
        <relationshipName>FeeSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeScheduleCode__c</fullName>
        <externalId>true</externalId>
        <label>Fee Schedule Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fee Schedule</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>